tests/toy/pos/000108_cdrc2.toylang
program a = { if 0 then { } else sleep; } .
