tests/toy/neg/000806_mutation.toylang
program a = { a = then 0; } .
